--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <!-- ===============================================-->
-    <!--    Document Title-->
+    <!--    Document Title -->
     <!-- ===============================================-->
     <title>Łukasz Langer</title>
 
-
     <!-- ===============================================-->
-    <!--    Favicons-->
+    <!--    Favicons -->
     <!-- ===============================================-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/logo.png">
@@ -23,8 +21,19 @@
     <link rel="manifest" href="assets/img/favicons/manifest.json">
     <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
-    <meta name="google-site-verification" content="OkmL3sIRR4J3duS1aMaF_keUFD-OUad55CuVKYUb6c0" />
 
+    <!-- ===============================================-->
+    <!--    Google Analytics -->
+    <!-- ===============================================-->
+    <meta name="google-site-verification" content="OkmL3sIRR4J3duS1aMaF_keUFD-OUad55CuVKYUb6c0" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9VDKRCB72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-T9VDKRCB72');
+    </script>
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
@@ -32,7 +41,6 @@
     <link href="assets/css/theme.css" rel="stylesheet" />
 
   </head>
-
 
   <body>
 
