--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
     <!-- ===============================================-->
     <!--    Google Analytics -->
     <!-- ===============================================-->
-    <meta name="google-site-verification" content="OkmL3sIRR4J3duS1aMaF_keUFD-OUad55CuVKYUb6c0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T9VDKRCB72"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5EN4HHHQTL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-T9VDKRCB72');
+      gtag('config', 'G-5EN4HHHQTL');
     </script>
 
     <!-- ===============================================-->
