--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       gtag('js', new Date());
       gtag('config', 'G-5EN4HHHQTL');
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57938582-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-57938582-3');
+    </script>
+
 
     <!-- ===============================================-->
     <!--    Stylesheets-->
