--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                             <p class="card-text ms-md-5">Interesuję się szeroko rozumianymi <b>nowymi technologiami</b>. Szczególnie fascynują mnie rozwiązania mobilne, smartfony, aplikacje mobilne oraz sztuczna inteligencja.</p>
                           </div>
                           <div class="col-sm-9 col-md-4">
-                            <div class="py-3 ms-md-5"><img src="assets/img/gallery/react.jpg" class="rounded d-block w-100"/></div>
-                            <p class="card-text ms-md-5">W ostatnim czasie moją uwagę przyciągnął <b>Framework React</b>. Wydaje się ciekawy i chętnie czytam o nowościach na ten temat. Planuję naukę tego Frameworka!</p>
+                            <div class="py-3 ms-md-5"><img src="assets/img/gallery/blockchain.jpg" class="rounded d-block w-100"/></div>
+                            <p class="card-text ms-md-5">W ostatnim czasie moją uwagę przyciągnęła technologia <b>Blockchain</b> oraz kryptowaluty.</p>
                           </div>
                           
                         </div>
