--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
       <div class="bg-holder"
         style="background-image:url(assets/img/illustrations/services-bg.png);background-position:center left;background-size:auto;">
       </div>
-      <div class="bg-holder"
-        style="background-image:url(assets/img/illustrations/dot.png);background-position:right;background-size:auto;margin-top:105px;">
-      </div>
 
       <div class="container position-relative">
         <div class="row align-items-center">
@@ -277,31 +274,27 @@
         <div class="row h-100 justify-content-center pt-6">
           <div class="col-md-6">
             <!-- Slider -->
-            <div id="clinic" class="carousel slide rounded-3 shadow" data-bs-ride="carousel">
+            <div id="virtualcart" class="carousel slide rounded-3 shadow" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/gallery/clinic1.png" class="d-block w-100 rounded-3">
+                  <img src="https://github.com/lukaszlanger/virtual-cart/blob/main/screenshots/scanning.PNG?raw=true" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/clinic2.png" class="d-block w-100 h-100 rounded-3">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/gallery/clinic3.png" class="d-block w-100 h-100 rounded-3">
+                  <img src="https://github.com/lukaszlanger/virtual-cart/blob/main/screenshots/shoppinglist.PNG?raw=true" class="d-block w-100 h-100 rounded-3">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#clinic" data-bs-slide="next">
+              <button class="carousel-control-prev" type="button" data-bs-target="#virtualcart" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Dalej</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#clinic" data-bs-slide="prev">
+              <button class="carousel-control-next" type="button" data-bs-target="#virtualcart" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Wstecz</span>
               </button>
               <div class="carousel-indicators justify-content-center">
-                <button type="button" data-bs-target="#clinic" data-bs-slide-to="0" class="active" aria-current="true"
+                <button type="button" data-bs-target="#virtualcart" data-bs-slide-to="0" class="active" aria-current="true"
                   aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#clinic" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#clinic" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#virtualcart" data-bs-slide-to="1" aria-label="Slide 2"></button>
               </div>
             </div>
           </div>
@@ -333,13 +326,16 @@
             <div id="medclinic" class="carousel slide rounded-3 shadow" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/gallery/clinic1.png" class="d-block w-100 rounded-3">
+                  <img src="https://raw.githubusercontent.com/lukaszlanger/MedMasters-clinic-app/main/project-screenshots/home.jpg" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/clinic2.png" class="d-block w-100 h-100 rounded-3">
+                  <img src="https://raw.githubusercontent.com/lukaszlanger/MedMasters-clinic-app/main/project-screenshots/menu.jpg" class="d-block w-100 h-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/clinic3.png" class="d-block w-100 h-100 rounded-3">
+                  <img src="https://raw.githubusercontent.com/lukaszlanger/MedMasters-clinic-app/main/project-screenshots/patients.jpg" class="d-block w-100 h-100 rounded-3">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://raw.githubusercontent.com/lukaszlanger/MedMasters-clinic-app/main/project-screenshots/loginpanel.jpg" class="d-block w-100 h-100 rounded-3">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#medclinic" data-bs-slide="next">
@@ -355,6 +351,7 @@
                   aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#medclinic" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#medclinic" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#medclinic" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
             </div>
           </div>
@@ -363,12 +360,12 @@
             <h4>Platforma do zarządzania kliniką medyczną</h4>
             <hr class="text-dark mx-auto mx-md-0" style="height:2px;width:50px" />
             <p class="pt-3 text-justify">
-              Aplikacja obsługująca przychodnię lekarską o różnych specjalizacjach. Projekt powstał w ramach laboratoriów programistycznych w czteroosobowej grupie. Mój wkład w projekt to cały frontend i połączenie bazy danych z Views. Aplikacja służy do obsługi całej przychodni. Istnieje system logowania dla pracowników. Pracownicy mogą edytować karty pacjentów, wizyty, dodawać lekarzy czy nowe leki do magazynu leków. Aplikacja działa w oparciu o wsparcie bazy danych przychodni.
+              Aplikacja obsługująca przychodnię lekarską o różnych specjalizacjach. Projekt powstał w ramach laboratoriów programistycznych w czteroosobowej grupie. Mój wkład w projekt to cały frontend i połączenie bazy danych z Views. Aplikacja służy do obsługi całej przychodni. Istnieje system logowania dla pracowników. Pracownicy mogą edytować karty pacjentów, wizyty, dodawać lekarzy czy nowe leki do magazynu leków.
               <br class="d-none d-lg-block" />
               <br class="d-none d-lg-block" />
               <b>Tech stack</b>
               <br class="d-none d-lg-block" />
-              Ten projekt MVC jest zaprogramowany w języku C# (ASP.NET). Model bazy danych został zaprojektowany przy użyciu Entity Framework Core. Widoki (frontend) używają HTML i Bootstrap.
+              Ten projekt <b>MVC</b> jest zaprogramowany w języku <b>C# (ASP.NET)</b>. Model bazy danych został zaprojektowany przy użyciu <b>Entity Framework Core</b>. Widoki (frontend) używają HTML i Bootstrap.
             </p>
             <div class="py-3">
               <a class="btn btn-sm btn-primary rounded-pill hover-top"
@@ -387,19 +384,19 @@
             <div id="musicshop" class="carousel slide rounded-3 shadow" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/gallery/shop1.png" class="d-block w-100" alt="...">
+                  <img src="https://github.com/lukaszlanger/music-album-shop/blob/main/project-screenshots/articles.jpg?raw=true" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/shop2.png" class="d-block w-100" alt="...">
+                  <img src="https://github.com/lukaszlanger/music-album-shop/blob/main/project-screenshots/shoppingcart.jpg?raw=true" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/shop3.png" class="d-block w-100" alt="...">
+                  <img src="https://github.com/lukaszlanger/music-album-shop/blob/main/project-screenshots/editarticle.jpg?raw=true" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/shop4.png" class="d-block w-100" alt="...">
+                  <img src="https://github.com/lukaszlanger/music-album-shop/blob/main/project-screenshots/pagitation.jpg?raw=true" class="d-block w-100 rounded-3">
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/gallery/shop5.png" class="d-block w-100" alt="...">
+                  <img src="https://github.com/lukaszlanger/music-album-shop/blob/main/project-screenshots/loginpanel.jpg?raw=true" class="d-block w-100 rounded-3">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#musicshop" data-bs-slide="next">
@@ -411,8 +408,7 @@
                 <span class="visually-hidden">Wstecz</span>
               </button>
               <div class="carousel-indicators justify-content-center">
-                <button type="button" data-bs-target="#musicshop" data-bs-slide-to="0" class="active" aria-current="true"
-                  aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#musicshop" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#musicshop" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#musicshop" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#musicshop" data-bs-slide-to="3" aria-label="Slide 4"></button>
@@ -449,13 +445,16 @@
               <div id="prison" class="carousel slide rounded-3 shadow" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="assets/img/gallery/clinic1.png" class="d-block w-100 rounded-3">
+                    <img src="assets/img/projects/prison/main.jpg" class="d-block w-100 rounded-3">
                   </div>
                   <div class="carousel-item">
-                    <img src="assets/img/gallery/clinic2.png" class="d-block w-100 h-100 rounded-3">
+                    <img src="assets/img/projects/prison/visit.jpg" class="d-block w-100 h-100 rounded-3">
                   </div>
                   <div class="carousel-item">
-                    <img src="assets/img/gallery/clinic3.png" class="d-block w-100 h-100 rounded-3">
+                    <img src="assets/img/projects/prison/cells.jpg" class="d-block w-100 h-100 rounded-3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/projects/prison/meetings.jpg" class="d-block w-100 h-100 rounded-3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#prison" data-bs-slide="next">
@@ -470,6 +469,7 @@
                   <button type="button" data-bs-target="#prison" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#prison" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#prison" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#prison" data-bs-slide-to="3" aria-label="Slide 4"></button>
                 </div>
               </div>
           </div>
@@ -586,8 +586,8 @@
       </div>
     </section>
 
-    <section class="py-7" id="interests">
-      <div class="container">
+    <section class="py-6" id="interests">
+      <div class="container text-justify align-items-center">
         <div class="bg-holder z-index-1"
           style="background-image:url(assets/img/illustrations/dot.png);background-position:right top;background-size:auto;margin-left:-30px;margin-top:10px;filter:contrast(1.5);">
         </div>
@@ -656,8 +656,8 @@
                         inteligencja.</p>
                     </div>
                     <div class="col-sm-9 col-md-4">
-                      <div class="py-3 ms-md-5"><img src="assets/img/gallery/blockchain.jpg"
-                          class="rounded d-block w-100" /></div>
+                      <div class="py-3 ms-md-5"><img src="assets/img/gallery/blockchain.jpg" class="rounded d-block w-100" />
+                      </div>
                       <p class="card-text ms-md-5">W ostatnim czasie moją uwagę przyciągnęła technologia
                         <b>Blockchain</b> oraz kryptowaluty.
                       </p>
@@ -668,37 +668,29 @@
             </div>
           </div>
         </div>
-      </div>
+        </div>
     </section>
 
-    <section class="py-6 pt-7 bg-primary-gradient" id="contact">
+    <section class="py-6 pt-2 bg-primary-gradient" id="contact">
       <div class="bg-holder"
         style="background-image:url(assets/img/illustrations/dot-2.png);background-position:right top;background-size:auto;margin-top:-75px;">
       </div>
       <!--/.bg-holder-->
 
       <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-4 order-0 order-sm-0 pe-6">
+        <div class="row justify-content-center pt-7 g-4">
+          <div class="col-sm-9 col-md-4">
             <img src="assets/img/illustrations/consultation.png" width="40px">
             <span class="fw-bold fs-5 text-light ms-3">Kontakt</span>
           </div>
-          <div class="col-4 col-md-4 col-lg mb-3 order-2 order-sm-1">
-            <h6 class="lh-lg fs-2 fw-bold text-light">Email</h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg"><a class="text-light fs-1 text-decoration-none"
-                  href="mailto:lukaszlanger1998@gmail.com">lukaszlanger1998@gmail.com</a></li>
-            </ul>
+          <div class="col-sm-9 col-md-4">
+            <p class="lh-lg fs-2 fw-bold text-light">📧 Email</p>
+            <p class="text-light fs-1 text-decoration-none">lukaszlanger1998@gmail.com</p>
           </div>
-          <div class="col-4 col-md-4 col-lg mb-3 order-3 order-sm-2">
-            <h6 class="lh-lg fs-2 fw-bold text-light">Numer telefonu</h6>
-            <ul class="list-unstyled mb-md-4 mb-lg-0">
-              <li class="lh-lg">
-                <p class="text-light fs-1 text-decoration-none">515 686 685</p>
-              </li>
-            </ul>
+          <div class="col-sm-9 col-md-4">
+            <p class="lh-lg fs-2 fw-bold text-light">📞 Numer telefonu</p>
+            <p class="text-light fs-1 text-decoration-none">+48 515 686 685</p>
           </div>
-          
         </div>
       </div>
     </section>
@@ -715,10 +707,8 @@
   <script src="vendors/is/is.min.js"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
   <script src="assets/js/theme.js"></script>
-
   <link
     href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500&amp;display=swap"
     rel="stylesheet">
 </body>
-
 </html>
