--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     <div class="col-sm-9 col-md-4">
                       <div class="py-3 ms-md-5">
                         <!-- Slider -->
-                        <div id="shop" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel slide" data-bs-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                               <img src="assets/img/gallery/mojezdj1.jpg" class="rounded d-block w-100" alt="...">
@@ -645,21 +645,69 @@
                           </div>
                         </div>
                       </div>
-                      <p class="card-text ms-md-5">Amatorsko interesuję się fotografią mobilną oraz obróbką zdjęć w
-                        programach takich jak Lightroom, VSCO. Powyżej wyświetla się galeria moich zdjęć.</p>
+                      <p class="card-text ms-md-5">Amatorsko interesuję się fotografią mobilną oraz obróbką zdjęć. Powyżej wyświetla się galeria moich zdjęć, a wszystkie zdjęcia na tej stronie są zrobione przeze mnie.</p>
                     </div>
                     <div class="col-sm-9 col-md-4">
-                      <div class="py-3 ms-md-5"><img src="assets/img/gallery/sam.jpg" class="rounded d-block w-100" />
+                      <div class="py-3 ms-md-5">
+                        <!-- Slider -->
+                        <div class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="assets/img/gallery/concert1.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/concert2.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/concert3.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/concert4.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/concert5.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                          </div>
+                        </div>
                       </div>
-                      <p class="card-text ms-md-5">Interesuję się szeroko rozumianymi <b>nowymi technologiami</b>.
-                        Szczególnie fascynują mnie rozwiązania mobilne, smartfony, aplikacje mobilne oraz sztuczna
-                        inteligencja.</p>
+                      <p class="card-text ms-md-5">Uwielbiam kontakt ze sztuką w postaci wizyt w teatrze, operze czy na koncertach i festiwalach. Muzyka towarzyszy mi we wszystkim, co robię!</p>
                     </div>
                     <div class="col-sm-9 col-md-4">
-                      <div class="py-3 ms-md-5"><img src="assets/img/gallery/blockchain.jpg" class="rounded d-block w-100" />
+                      <div class="py-3 ms-md-5">
+                        <!-- Slider -->
+                        <div class="carousel slide" data-bs-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img src="assets/img/gallery/zdj1.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj2.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj3.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj4.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj5.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj6.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj7.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj8.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="assets/img/gallery/zdj9.jpg" class="rounded d-block w-100" alt="...">
+                            </div>
+                          </div>
+                        </div>
                       </div>
-                      <p class="card-text ms-md-5">W ostatnim czasie moją uwagę przyciągnęła technologia
-                        <b>Blockchain</b> oraz kryptowaluty.
+                      <p class="card-text ms-md-5">Nie lubię stać w miejscu. Dosłownie i w przenośni. Zawsze staram się rozwijać w każdej dziedzinie życia i pracować nad swoimi wadami, a oprócz tego uwielbiam podróżować i poznawać nowe kultury.
                       </p>
                     </div>
                   </div>
