--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="container position-relative">
         <div class="row align-items-center">
           <div class="col-md-5 col-lg-5 order-md-1 pt-8">
-            <img class="img-fluid" src="assets\img\gallery\me.jpg" alt="" style="border-radius: 2%;" />
+            <img class="img-fluid" src="assets\img\gallery\me_new.jpg" alt="" style="border-radius: 2%;" />
           </div>
 
           <div class="col-md-7 col-lg-6 text-center text-md-start pt-5 pt-md-9">
@@ -128,13 +128,11 @@
                 </g>
               </svg>Otwórz moje CV
             </a>
-            <a class=" fs-1 text-decoration-none" target="_blank"
-                  href="https://www.linkedin.com/in/%C5%82ukasz-langer-51968b15b/">
-                <img src="assets\img\icons\LinkedIn.jpg" class="rounded-pill hover-top btn" width="100px"></a>
-                <a class=" fs-1 text-decoration-none" target="_blank"
-                  href="https://github.com/lukaszlanger">
-                <img src="assets\img\icons\GitHub.jpg" class="rounded-pill hover-top btn" width="100px"></a>
-          </div>
+            <a class=" fs-1 text-decoration-none" target="_blank" href="https://www.linkedin.com/in/%C5%82ukasz-langer-51968b15b/">
+              <img src="assets\img\icons\LinkedIn.jpg" class="rounded-pill hover-top btn" width="100px"></a>
+            <a class=" fs-1 text-decoration-none" target="_blank" href="https://github.com/lukaszlanger">
+              <img src="assets\img\icons\GitHub.jpg" class="rounded-pill hover-top btn" width="100px"></a>
+            </div>
         </div>
       </div>
     </section>
