--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="container position-relative">
         <div class="row align-items-center">
           <div class="col-md-5 col-lg-5 order-md-1 pt-8">
-            <img class="img-fluid" src="assets\img\gallery\me_new.jpeg" style="border-radius: 50%;" />
+            <img class="img-fluid" src="assets\img\gallery\me_new.JPEG" style="border-radius: 50%;" />
           </div>
 
           <div class="col-md-7 col-lg-6 text-center text-md-start pt-5 pt-md-9">
